fix(experimental): `Avatar` with image has redundant gap below itself (#5449)

--- a/projects/experimental/components/avatar/avatar.style.less
+++ b/projects/experimental/components/avatar/avatar.style.less
@@ -95,6 +95,8 @@
 
     &._img {
         background: transparent;
+        line-height: 0;
+        vertical-align: middle;
     }
 }
 
